--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,9 @@ html {
   margin: 0;
   padding: 0;
 }
-
+.navbar {
+  background-color: #211a1d;
+}
 .navbar-brand img {
   width: 5vh;
   height: 5vh;
@@ -17,6 +19,9 @@ html {
   font-family: bridgersbrush;
   src: url(bridgersbrush.ttf);
 }
+#about {
+  background-color: #f8f0fb;
+}
 #about h1 {
   font-family: bridgersbrush, arial, sans-serif;
   text-align: center;
@@ -26,6 +31,9 @@ html {
   font-size: 1.5vw;
   font-weight: bold;
   line-height: 2.5vw;
+}
+#galery {
+  background-color: #cad5ca;
 }
 #group-image {
   display: flex;
@@ -39,15 +47,28 @@ html {
   height: 40vw;
 }
 #tours {
-  background-color: grey;
-  margin-top: 10px;
+  background-color: #f8f0fb;
+
   text-align: center;
 }
 #tours h2 {
   font-family: bridgersbrush, arial, sans-serif;
-  color: white;
+  color: black;
   font-size: 10vw;
 }
 .tickets-link img:hover {
   filter: brightness(40%);
+}
+#concerts-btn {
+  margin-top: 20px;
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.5vw;
+  font-family: Arial, Helvetica, sans-serif;
+}
+#contact {
+  text-align: center;
+  background-color: #cad5ca;
+  margin-top: 20px;
 }
