--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ html {
 }
 #galery {
   background-color: #cad5ca;
+  margin-top: 20px;
 }
 #group-image {
   display: flex;
@@ -71,4 +72,60 @@ html {
   text-align: center;
   background-color: #cad5ca;
   margin-top: 20px;
+}
+footer {
+  text-align: center;
+  background-color: #211a1d;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5vw;
+}
+.social a {
+  margin-left: 20px;
+  font-size: 3vw;
+  color: white;
+}
+.msgform {
+  margin-top: 20px;
+}
+#name,
+#email {
+  margin-left: auto;
+  margin-right: auto;
+  width: 200px;
+}
+#textmsg {
+  display: block;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30vw;
+  height: 5vw;
+}
+.send {
+  width: 10vw;
+  margin: 10px auto 10px auto;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+}
+@media screen and (max-width: 600px) {
+  .contact-info {
+    font-size: 3vw;
+  }
+  #concerts-btn {
+    font-size: 3vw;
+  }
+  #about p {
+    font-size: 2.2vw;
+    font-weight: bold;
+    line-height: 2.5vw;
+  }
+  #textmsg {
+    width: 70vw;
+    height: 20vw;
+  }
+  #name,
+  #email {
+    margin-top: 2vw;
+  }
 }
